Basic Filtering Foundation
Set up a basic filtering foundation

--- a/PetStoreApp/index.html
+++ b/PetStoreApp/index.html
@@ -20,7 +20,7 @@
 
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Your React application -->
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 </body>
 <style>
   .bd-placeholder-img {
