--- a/PetStoreApp/index.html
+++ b/PetStoreApp/index.html
@@ -21,6 +21,8 @@
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Your React application -->
   <script type="module" src="./src/main.jsx"></script>
+
+  <script src="./src/userDashboard.html"></script>
 </body>
 <style>
   .bd-placeholder-img {
@@ -100,4 +102,5 @@
     display: block !important;
   }
 </style>
+
 </html>
