new branch just in case

--- a/PetStoreApp/adoption_main.html
+++ b/PetStoreApp/adoption_main.html
@@ -66,9 +66,9 @@
         <div class="filter_type hover_parent" id="filter_species">
             Species
             <div class="hover_child_container" id="species_child_container">
-                <div class= "hover_child" onclick="setFilters('Species','Dog')">Dog</div>
-                <div class= "hover_child" onclick="setFilters('Species','Cat')">Cat</div>
-                <div class= "hover_child" onclick="setFilters('Species','Rabbit')">Rabbit</div>
+                <div class= "hover_child" onClick="setFilters('Species','Dog')">Dog</div>
+                <div class= "hover_child" onClick="setFilters('Species','Cat')">Cat</div>
+                <div class= "hover_child" onClick="setFilters('Species','Rabbit')">Rabbit</div>
                 <div class= "hover_child" onclick="setFilters('Species','Guinea Pigs')">Guinea Pig</div>
             </div>
         </div>
