edits to sign in

--- a/PetStoreApp/index.html
+++ b/PetStoreApp/index.html
@@ -22,7 +22,7 @@
   <!-- Your React application -->
   <script type="module" src="./src/main.jsx"></script>
 
-  <script src="./src/userDashboard.html"></script>
+  <!-- <script src="./src/userDashboard.html"></script> -->
 </body>
 <style>
   .bd-placeholder-img {
